--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,9 @@ set(CMAKE_CXX_COMPILER "clang++")
 
 project("GdiVirus")
 
+if(MINGW OR MSYS OR CYGWIN)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+endif()
+
 add_executable("PepeGdiVirus" WIN32 "main.cpp" "resource.h" "resouse.rc")
